syntax = "proto3";

option go_package = "pb/xp";

message AddGlobalXp {
    string token = 1;
    string discord_id = 2;
    int64 count = 3;
}

message LevelUp {
    int32 new_level = 1;
    bool level_up = 2;
}

service Xp {
    rpc AddUserGlobalXp (AddGlobalXp) returns (LevelUp) {}
}
